--- a/c_glycerinogenes_rate_expressions.org
+++ b/c_glycerinogenes_rate_expressions.org
@@ -12,6 +12,7 @@
 
 Αν θέλουμε να δούμε την κινητική παραγωγής της γλυκερόλης, αυτή θα είναι \[ r_G = \frac{dG}{dt} = k C_S^n \]. Εφόσον βρήκαμε το r_G και το C_S δίνεται από τα πειραματικά δεδομένα, μπορούμε να κάνουμε fit στην γραμμική σχέση \[ \ln r_G = \ln k + n \ln C_S\] για να βρούμε την τεχνική κινητική παραγωγής του επιθυμητού προιόντος. Προκύπτει πως η τάξη της αντίδρασης είναι 0.335 ως προς το υπόστρωμα και η ειδική ταχύτητα είναι 0.257. Άρα \( r_G = 0.257 [S]^{0.335} \).
 
-Με βάση τα δεδομένα αυτά, μπορούμε να κάνουμε μία εκτίμηση του όγκου του αντιδραστήρα που απαιτείται και της ετήσιας παραγωγής γλυκερόλης. Εφόσον είναι γνωστός ο χρόνος παραμονής και η συγκέντρωση γλυκόζης που εισέρχεται στον αντιδραστήρα μπορεί να υπολογιστεί η κατανάλωση της γλυκόζης ανηγμένη ως προς τον όγκο του αντιδραστήρα [\( \frac{g}{l \cdot year} \)]. Εφόσον είναι γνωστό και το ρεύμα τροφοδοσίας μπορεί να υπολογιστεί πόση μάζα γλυκόζης πρέπει να διαχειριστούμε τον χρόνο. Ο λόγος αυτών των δύο, μας δίνει το απαραίτητο working volume ώστε να επεξεργαστούμε όλη την βιομάζα που έχει η τροφοδοσία χρησιμοποιώντας σε κάθε batch την βέλτιστη συγκέντρωση υποστρώματος. Αυτός προκύπτει ίσος με 1301.5 m^3. Ο συνολικός αντιδρών όγκος άρα πρέπει να είναι στο ελάχιστο 1301.5 m^3.
+Με βάση τα δεδομένα αυτά, μπορούμε να κάνουμε μία εκτίμηση του όγκου του αντιδραστήρα που απαιτείται και της ετήσιας παραγωγής γλυκερόλης. Εφόσον είναι γνωστός ο χρόνος παραμονής και η συγκέντρωση γλυκόζης που εισέρχεται στον αντιδραστήρα μπορεί να υπολογιστεί η κατανάλωση της γλυκόζης ανηγμένη ως προς τον όγκο του αντιδραστήρα [\( \frac{g}{l \cdot year} \)]. Εφόσον είναι γνωστό και το ρεύμα τροφοδοσίας μπορεί να υπολογιστεί πόση μάζα γλυκόζης πρέπει να διαχειριστούμε τον χρόνο. Ο λόγος αυτών των δύο, μας δίνει το απαραίτητο working volume ώστε να επεξεργαστούμε όλη την βιομάζα που έχει η τροφοδοσία χρησιμοποιώντας σε κάθε batch την βέλτιστη συγκέντρωση υποστρώματος. Αυτός προκύπτει ίσος με 1301.5 m^3. Ο συνολικός αντιδρών όγκος άρα πρέπει να είναι στο ελάχιστο 1301.5 m^3. Σε ξεχωριστό αρχείο παρουσιάζονται και τα οικονομικά στοιχεία της διεργασίας
 
-Σε ξεχωριστό αρχείο παρουσιάζονται και τα οικονομικά στοιχεία της διεργασίας
+Για την προσωμοίωση του μοντέλου στο Aspen, μπορεί να χρησιμοποιηθεί η LHHW με τέτοιον τρόπο ώστε να προσωμοιάσει το Monod. Πρέπει οι συγκεντρώσεις να είναι υπολογισμένες ως προς Mass concentration (kg/m^3 σε SI, αλλά το g/l είναι ισοδύναμο), αλλά πρέπει το μ_max να έχει και αυτό μονάδες SI. Το μ_max σε μονάδες SI είναι 3.06e-6. Άρα, το μοντέλο Monod με τον ρυθμό εκφρασμένο σε μονάδες SI και τις συγκεντρώσεις υπολογισμένες ως προς το mass concentration είναι \[ \frac{dx}{dt} = \frac{3.06*10^{-6}[S]}{236.19+[S]}[x] \]
+
