Added files for the complete bioreactor simulation
In the /Aspen folder are the actual files of the simulations and a
file documenting the process. Supplementary to those is
biomass_modeling_aspen in the top level which is a file explaining how
I modeled the biomass in Aspen. Lastly in the /Calculations folder are
some matlab files I used for the simulation data.

--- a/biomass_modeling_aspen.org
+++ b/biomass_modeling_aspen.org
@@ -7,7 +7,9 @@
 Τέλος, για την θερμότητα σύνθεσης, μπορεί να υπολογιστεί εύκολα η θερμότητα καύσης της ένωσης και από αυτήν η θερμότητα σύνθεσης. Καθώς αυτό αφορά μία τελείως άλλη αντίδραση, οι υπολογισμοί του είναι σε ξεχωριστό αρχείο biomass_combustion.
 Προκύπτει η αντίδραση
 \[  C_{3.33}H_{4.72}O_{3.38}N_{0.05}P_{0.0015} + 5.65 O_2 \rightarrow 2.36H_2O + 3.33CO_2+7.5 \cdot 10^{-4} P_2O_5 + 2.52 \cdot 10^{-2} N_2 \]
-Η επίδραση του πεντοξειδίου του φωσφόρου στην θερμότητα καύσης μπορεί να θεωρηθεί αμελητέα καθώς είναι αρκετές τάξες μεγέθους μικρότερη ποσότητα από αυτές του νερού και του διοξειδίου του άνθρακα ενώ το άζωτο θεωρείται αδρανές. Άρα, η θερμότητα καύσης προκύπτει από τις θερμότητες σύνθεσης H_2O και CO_2 οι οποίες είναι \( -68.7979 \frac{kcal}{mol} \) και \( -94.052 \frac{kcal}{mol} \) αντίστοιχα. Άρα, η θερμότητα σύνθεσης της βιομάζας είναι 475.92 kcal/mol.
+Η επίδραση του πεντοξειδίου του φωσφόρου στην θερμότητα καύσης μπορεί να θεωρηθεί αμελητέα καθώς είναι αρκετές τάξες μεγέθους μικρότερη ποσότητα από αυτές του νερού και του διοξειδίου του άνθρακα ενώ το άζωτο θεωρείται αδρανές. Άρα, η θερμότητα καύσης προκύπτει από τις θερμότητες σύνθεσης H_2O και CO_2 οι οποίες είναι \( -68.7979 \frac{kcal}{mol} \) και \( -94.052 \frac{kcal}{mol} \) αντίστοιχα. Άρα, η θερμότητα σύνθεσης της βιομάζας είναι 475.92 kcal/mol. Αν ληφθεί υπόψην ο φώσφορος είναι 476.2 kcal/mol.
+
+Περνόντας αυτά στο Aspen, βρέθηκαν και άλλα ζητούμενα. Η θερμοκρασία βρασμού του υλικού (που θα υποτεθεί όπως και η πυκνότητα ίση με του αμύλου) και η ενέργεια gibbs σύνθεσης, η οποία θα υπολογιστεί αντίστοιχα με την ενθαλπία. Η ενέργεια Gibbs της σύνθεσης του νερού είναι -237.2 kJ/mol ενώ του CO_2 είναι -394.4 kJ/mol. Προκύπτει μία ενέργεια Gibbs 1875.8 kJ/mol 
 
 Στον παρακάτω πίνακα συνοψίζονται οι απαραίτητες ιδιότητες για να μοντελοποιηθεί η βιομάζα στο Aspen.
 #+CAPTION: Απαραίτητες ιδιότητες βιομάζας
@@ -17,3 +19,26 @@
 | Πυκνότητα          | 1.5 (g/ml)        |
 | Θερμοχωρητικότητα  | 2664 (J/kg K)     |
 | Θερμότητα σύνθεσης | 475.92 (kcal/mol) |
+
+Για την πλήρη μοντελοποίηση του αντιδραστήρα πρέπει να ορίσουμε και το Corn Steep Liquor. Αυτό μπορεί να οριστεί ως ένα conventional component καθώς υπάρχουν στην βιβλιογραφία αρκετά δεδομένα για αυτό. Η σύσταση που υποτέθηκε είναι 60% νερό, 15% γαλακτικό οξύ, 5% ζάχαρες, 12% τέφρα, 5% άζωτο όπου το 3% περίπου είναι αμινοξέα και το 2% αμμωνία και 3% φώσφορος. Στην πραγματικότητα οι τιμές αυτές είναι λίγο υπερεκτιμημένες καθώς τα βασικά συστατικά είναι 50% νερό, 15% γαλακτικό οξύ, 3% άλλες ζάχαρες, 4% άζωτο, 10% τέφρα και 3% φώσφορος. Αλλά, αυτά δεν αθροίζονται στη μονάδα για αυτό προστέθηκαν ποσότητες σε ορισμένα από τα συστατικά για να είναι περίπου 100%. Στην πράξη, αυτές οι ποσότητες είναι άλλες ενώσεις σε μικρές περιεκτικότητες οι οποίες δεν συμπεριλαμβάνονται για να είναι πιό απλή η μοντελοποίηση.
+
+Με βάση αυτά, το CSL έχει μοριακό τύπο \( C_{0.94}H_{2.94}O_{1.41}N_{0.04}P_{0.03} \) από το οποίο προσδιορίζεται άμεσα το μοριακό βάρος. Το σημείο βρασμού του είναι ίσο με 204 \( ^oC \) (με βάση το U.S. Environmental Protection Agency Hazard Characterization Document), η πυκνότητα του 1.25 g/ml [[cite:&liggettCORNSTEEPLIQUOR]] ενώ η ενθαλπία και ενέργεια Gibbs της σύνθεσης του θα προκύψει με παρόμοια λογική με τη βιομάζα. Επίσης, χρειάστηκε ο γραμμομοριακός όγκος (MW/density) και η τάση ατμών 0.0813 mmHg (από την ίδια πηγή με το σημείο βρασμού)
+
+Η στοιχειομετρία της καύσης του CSL είναι
+\[  C_{0.94}H_{2.94}O_{1.41}N_{0.04}P_{0.03} + 2.015O_2 \rightarrow 1.47H_2O + 0.94CO_2 + 0.015P_2O_5 + 0.02N_2 \] με βάση αυτά, η ενθαλπία σύνθεσης του CSL είναι 195.03 kcal/mol και η ενέργεια Gibbs 741.26 kJ/mol. Ομοίως με παραπάνω υπολογίζεται και η θερμοχωρητικότητα του ως 3556 J/kg K.
+
+Τα αντίστοιχα αρχεία είναι τα CSL_combustion και CSL_heat_capacity, αλλά στην πράξη αποτελούν copy-paste των αντίστοιχων για τη βιομάζα.
+
+Η προσωμοίωση με το CSL τρέχει με κάποια προβλήματα, για αυτό υπάρχουν δύο αρχεία aspen ένα με το csl και ένα χωρίς. 
+
+Χωρίς το CSL, η βιομάζα θα έχει τύπο \( C_{3.286}H_{4.571}O_{3.311}N_{0.048} \) και οι ιδιότητες της θα είναι
+#+CAPTION: Απαραίτητες ιδιότητες βιομάζας
+| Ιδιότητα           | Τιμή              |
+|--------------------+-------------------|
+| Μοριακό Βάρος      | 97.657 (g/mol)    |
+| Πυκνότητα          | 1.5 (g/ml)        |
+| Θερμοχωρητικότητα  | 2646.8 (J/kg K)   |
+| Θερμότητα σύνθεσης | 466.29 (kcal/mol) |
+| Ενέργεια Gibbs     | 1838.1 (kJ/mol)   |
+
+Τρέχοντας την προσωμοίωση, παρατηρούμε πως το Aspen ζητάει αρκετά περισσότερα δεδομένα από αυτά δυστυχώς. Θέλει γραμμομοριακό όγκο (ο οποίος μπορεί να υπολογιστεί από την πυκνότητα και το μοριακό βάρος), κρίσιμες συνθήκες (πίεση, όγκο και θερμοκρασία) και μία σταθερά του μοντέλου Rackett. Για τον κρίσιμο όγκο, βρέθηκε η αναλογία του κρίσιμου όγκου με τον όγκο στους 25 \( ^oC \) για το νερό και υποτέθηκε παρόμοια. Η κρίσιμη και θερμοκρασία υποτέθηκαν καθώς δεν υπάρχουν δεδομένα για αυτά αλλά ούτε πρόκειται να επηρεάσουν πρακτικά το αποτέλεσμα. Στην πράξη, ο αντιδραστήρας λειτουργεί σε πολύ χαμηλή θερμοκρασία και πίεση για να μας ενδιαφέρουν. Η σταθερά του μοντέλου Rackett σύμφωνα με το help του Aspen είναι από 0.1 εώς 1. Για αυτό υποτέθηκε η τιμή 0.5. Καθώς το μοντέλο αυτό καθορίζει γραμμομοριακό όγκο υγρού, ούτε αυτό έχει πρακτικά σημασία για το μοντέλο.
