Commiting my initial docs for the 3rd exam

--- a/Aspen/complete_bioreactor.org
+++ b/Aspen/complete_bioreactor.org
@@ -2,7 +2,7 @@
 
 Το αρχείο αυτό αποτελεί συνέχεια του αρχείου simplified_bioreactor και αναφέρεται στο πως προχωρήσαμε από το απλό μοντέλο στην ολοκληρωμένη προσωμοίωση. Το μεγάλο θέμα είναι η προσθήκη της βιομάζας στην προσωμοίωση. Όλες οι σχετικές πληροφορίες για την μοντελοποίηση της βιομάζας στο ASPEN Plus βρίσκονται στο αρχείο biomass_modeling.org. Επίσης, αξίζει να αναφερθεί πως έγινε αλλαγή στη μέθοδο από NRTL σε NRTL-HOC καθώς το πραγματικό σύστημα έχει οξικό οξύ και σύμφωνα με το Method Assistant του Aspen το NRTL-HOC είναι η κατάλληλη τροποποίηση του NRTL αν υπάρχουν οργανικά οξέα στο μίγμα.
 
-Το ρεύμα τροφοδοσίας ορίστηκε ως ένα υδατικό διάλυμα στο οποίο όλα τα συστατικά ορίζονται σε συγκέντρωση g/l. Η γλυκόζη τροφοδοτείται όπως έχει βρεθεί στη βιβλιογραφία σε συγκέντρωση 230.44 g/l ενώ η ουρία σε 2 g/l. Επίσης, ο αντιδραστήρας εμβολιάζεται με μία ποσότητα βιομάζας στην τροφοδοσία για να μπορέσει αυτή να αναπτυχθεί. Με βάση την πειραματική διαδικασία από την οποία έχουμε βγάλει την κινητική ([[cite:&jinByproductFormationNovel2003]]) εμβολιαστηκέ βιομάζα στο διάλυμα σε συγκέντρωση 5% v/v. Για να πάμε από αυτή τη συγκέντρωση στην συγκέντρωση σε g/l χρειαζόμαστε την πυκνότητα η οποία έχει υποτεθεί 1500 g/l. Προκύπτει ότι η αρχική συγκέντρωση βιομάζας που εμβολιάζεται είναι 75 g/l. Επίσης, πρέπει να προστεθεί και οξυγόνο για να διεξαχθεί η αντίδραση. Προστέθηκε λίγο πάνω από το στοιχειομετρικό οξυγόνο που αντιστοιχεί σε 34 g/l. Δεν προστέθηκε το αντίστοιχο άζωτο επειδή δημιουργούσε προβλήματα στην προσωμοίωση. Έπειτα, η ροή ανά ώρα του ρεύματος αυτού ρυθμίστηκε έτσι ώστε η ετήσια παροχή γλυκόζης να είναι αυτή που υπάρχει διαθέσιμη (32692 τόνοι). Προκύπτει, πως αυτό είναι 706.5 kmol/hr.
+Το ρεύμα τροφοδοσίας ορίστηκε ως ένα υδατικό διάλυμα στο οποίο όλα τα συστατικά ορίζονται σε συγκέντρωση g/l. Η γλυκόζη τροφοδοτείται όπως έχει βρεθεί στη βιβλιογραφία σε συγκέντρωση 230.44 g/l ενώ η ουρία σε 2 g/l. Επίσης, ο αντιδραστήρας εμβολιάζεται με μία ποσότητα βιομάζας στην τροφοδοσία για να μπορέσει αυτή να αναπτυχθεί. Με βάση το διάγραμμα από το οποίο αντλήθηκαν και τα υπόλοιπα δεδομένα [[cite:&jinByproductFormationNovel2003]], η βιομάζα στην τροφοδοσία είναι 0.93824 g/l. Επίσης, πρέπει να προστεθεί και οξυγόνο για να διεξαχθεί η αντίδραση. Προστέθηκε λίγο πάνω από το στοιχειομετρικό οξυγόνο που αντιστοιχεί σε 34 g/l. Δεν προστέθηκε το αντίστοιχο άζωτο επειδή δημιουργούσε προβλήματα στην προσωμοίωση. Έπειτα, η ροή ανά ώρα του ρεύματος αυτού ρυθμίστηκε έτσι ώστε η ετήσια παροχή γλυκόζης να είναι αυτή που υπάρχει διαθέσιμη (32692 τόνοι). Προκύπτει, πως αυτό είναι 706.5 kmol/hr.
 
 Έπειτα, ορίστηκε η στοιχειομετρία της πραγματικής αντίδρασης
 \[ 1.22C_6H_{12}O_6 + 0.024CO(NH_2)_2 + O_2 \rightarrow C_3H_8O_3 + CO_2+H_2O + 0.025 CH_3CH_2OH + 0.019CH_3COOH + Biomass \]
