--- a/Aspen/steam_explosion.org
+++ b/Aspen/steam_explosion.org
@@ -2,7 +2,7 @@
 
 Το αρχείο αυτό αποτελεί το documentation της διεργασίας του steam explosion στο Aspen. Η διεργασία του steam explosion είναι η πρώτη διεργασία που γίνεται με σκοπό τον αρχικό διαχωρισμό των κλασμάτων της βιομάζας. Για αυτό έχει την δυσκολία ότι πρέπει να ορίσουμε την τροφοδοσία καθώς και την έξοδο του στο Aspen. Το πυρηνόξυλο ορίστηκε με βάση τις αναλύσεις των [[cite:&koutsomitopoulouPreparationCharacterizationOlive2014;&gonzalezCombustionOptimisationBiomass2004]] . Η στοιχειακή ανάλυση δεν αθροιζόταν ακριβώς στο 1 (αναφέρεται πως υπάρχουν αρκετά στοιχεία σε πολύ μικρές συγκεντρώσεις το οποίο είναι πιθανή πηγή σφάλματος) για αυτό προστέθηκαν μικρές ποσότητες στα C, H, O.
 
-Έπειτα, για τον αντίστοιχο ορισμό κυτταρίνης και λιγνίνης, βρέθηκε στοιχειακή ανάλυση λιγνίνης με βάση τους [[cite:&fernandez-bolanosCharacterizationLigninObtained1999]] ενώ τα υπόλοιπα βρέθηκαν από τη βάση δεδομένων [[https://phyllis.nl/Browse/Standard/ECN-Phyllis#][Phyllis2]] . Για το ημικυτταρινικό κλάσμα, ξέρουμε πως υδρολύεται κατά την διάρκεια του steam explosion και η σύσταση του είναι γνωστή από τους [[cite:&fernandez-bolanosSteamexplosionOliveStones2001]] (έχει ξυλόζη, άλλες πεντόζες και εξόζες όπου στο Aspen Θεωρήθηκαν όλες αραβινόζη, φαινόλες που προσωμοιόθηκαν ως η απλούστερη φαινόλη και άλλα συστατικά που είναι σε μικρή συγκέντρωση και μπορούν να αγνοηθούν). Το ποσό που αναφέρεται ως άγνωστο θεωρήθηκε πως είναι κατά 100% νερό. Επίσης για τον υπολογισμό του νερού στην έξοδο του αντιδραστήρα λήφθηκε υπόψην και η υγρασία του πυρηνόξυλου καθώς τα δεδομένα που βρέθηκαν στη βάση δεδομένων ήταν για ξηρή βάση. Έπειτα, μία ακόμη παραδοχή που έγινε είναι πως όλη η βιομάζα που διασπάστηκε θερμικά από το steam explosion είναι CO_2, κάτι που στη πραγματικότητα δεν είναι σίγουρο αλλά είναι πιθανή κατάληξη. Το μοντέλο που χρησιμοποιήθηκε για τους θερμοδυναμικούς υπολογισμούς είναι το NRTL-RK.
+Έπειτα, για τον αντίστοιχο ορισμό κυτταρίνης και λιγνίνης, βρέθηκε στοιχειακή ανάλυση λιγνίνης με βάση τους [[cite:&fernandez-bolanosCharacterizationLigninObtained1999]] ενώ τα υπόλοιπα βρέθηκαν από τη βάση δεδομένων [[https://phyllis.nl/Browse/Standard/ECN-Phyllis#][Phyllis2]] . Για το ημικυτταρινικό κλάσμα, ξέρουμε πως υδρολύεται κατά την διάρκεια του steam explosion και η σύσταση του είναι γνωστή από τους [[cite:&fernandez-bolanosSteamexplosionOliveStones2001]] (έχει ξυλόζη, άλλες πεντόζες και εξόζες όπου στο Aspen Θεωρήθηκαν όλες αραβινόζη, φαινόλες που προσωμοιόθηκαν ως η απλούστερη φαινόλη και άλλα συστατικά που είναι σε μικρή συγκέντρωση και μπορούν να αγνοηθούν). Το ποσό που αναφέρεται ως άγνωστο θεωρήθηκε πως είναι κατά 100% νερό. Επίσης για τον υπολογισμό του νερού στην έξοδο του αντιδραστήρα λήφθηκε υπόψην και η υγρασία του πυρηνόξυλου καθώς τα δεδομένα που βρέθηκαν στη βάση δεδομένων ήταν για ξηρή βάση. Έπειτα, μία ακόμη παραδοχή που έγινε είναι πως όλη η βιομάζα που διασπάστηκε θερμικά από το steam explosion είναι CO_2, κάτι που στη πραγματικότητα δεν είναι σίγουρο αλλά είναι πιθανή κατάληξη. Το μοντέλο που χρησιμοποιήθηκε για τους θερμοδυναμικούς υπολογισμούς είναι το SRK, μοντέλο κατάλληλο για υπολογισμούς σε υψηλές πιέσεις.
 
 Για το ρεύμα τροφοδοσίας, ορίστηκε ως 200000 tn πυρηνόξυλο στην θερμοκρασία και πίεση λειτουργίας του steam explosion. Οι διεργασίες που το οδηγούν σε αυτές τις συνθήκες θα μελετηθούν σε επόμενο στάδιο.
 
